added html, styled css, started js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
+    <header>
+        <h1>View Highscores</h1>
+        <h1>Timer</h1>
+    </header>
+    <main>
+        <h2 id=title></h2>
+        <h2 id=question></h2>
+        <div>
+            <button id="start"></button>
+        </div>
+        <p id=answer1></p>
+        <p id=answer2></p>
+        <p id=answer3></p>
+        <p id=answer4></p>
+        <p id=correct-wrong></p>
+
+
+    </main>
     <script src="assets/js/script.js"></script>    
 </body>
 </html>
