added var, first event listener

--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
 <body>
     <header>
         <h1>View Highscores</h1>
-        <h1>Timer</h1>
+        <h1 id=timer>Timer</h1>
     </header>
-    <main>
+    <main class=container>
         <h2 id=title></h2>
+        <p></p>
         <h2 id=question></h2>
         <div>
-            <button id="start"></button>
+            <button id=start></button>
         </div>
-        <p id=answer1></p>
-        <p id=answer2></p>
-        <p id=answer3></p>
-        <p id=answer4></p>
-        <p id=correct-wrong></p>
+        <button id=answer1 hidden></button>
+        <p></p>
+        <button id=answer2 hidden></button>
+        <p></p>
+        <button id=answer3 hidden></button>
+        <p></p>
+        <button id=answer4 hidden></button>
+        <p></p>
+        <p id=correctwrong></p>
 
 
     </main>
