questions & answers and countdown timer working

--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
         <div>
             <button id=start></button>
         </div>
-        <button id=answer1 hidden></button>
+        <button id=answer0 data-state="hidden"></button>
         <p></p>
-        <button id=answer2 hidden></button>
+        <button id=answer1 data-state="hidden"></button>
         <p></p>
-        <button id=answer3 hidden></button>
+        <button id=answer2 data-state="hidden"></button>
         <p></p>
-        <button id=answer4 hidden></button>
+        <button id=answer3 data-state="hidden"></button>
         <p></p>
         <p id=correctwrong></p>
 
 
     </main>
+    <script src="assets/js/questions.js"></script>   
     <script src="assets/js/script.js"></script>    
 </body>
 </html>
