--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Coding Quiz</title>
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
+
 <body>
     <header>
         <h1>View Highscores</h1>
@@ -19,19 +21,21 @@
         <div>
             <button id=start></button>
         </div>
-        <button id=answer0 data-state="hidden"></button>
-        <p></p>
-        <button id=answer1 data-state="hidden"></button>
-        <p></p>
-        <button id=answer2 data-state="hidden"></button>
-        <p></p>
-        <button id=answer3 data-state="hidden"></button>
-        <p></p>
-        <p id=correctwrong></p>
-
+        <div class=answer>
+            <button id=answer0></button>
+            <p></p>
+            <button id=answer1></button>
+            <p></p>
+            <button id=answer2></button>
+            <p></p>
+            <button id=answer3></button>
+            <p></p>
+            <p id=correctwrong></p>
+        </div>
 
     </main>
-    <script src="assets/js/questions.js"></script>   
-    <script src="assets/js/script.js"></script>    
+    <script src="assets/js/questions.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
