got game over screen to work, and store/get score from local storage

--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
             <p></p>
             <p id=correctwrong></p>
         </div>
+        <div class=gameOver>
+            <h1>Game Over!</h1>
+            <h1>Your score is:</h1>
+            <h3 id=userScore></h3>
+            <h1>Enter your intials:</h1>
+            <h2>
+                <form action=>
+                    <input type="text" id="initials" placeholder="Initials">
+                    <input type="submit" value="Submit">              
+                </form>
+            </h2>
+        </div>
 
     </main>
     <script src="assets/js/questions.js"></script>
