added initials saving to local storage, added correct and wrong upon answer submission

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
             <h1>Your score is:</h1>
             <h3 id=userScore></h3>
             <h1>Enter your intials:</h1>
-            <h2>
-                <form action=>
+            <h2 id="form">
+                <form>
                     <input type="text" id="initials" placeholder="Initials">
                     <input type="submit" value="Submit">              
                 </form>
+                <p id="log"></p>
             </h2>
         </div>
 
