--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>View Highscores</h1>
+        <h1 a href="assets/highscore.html">View Highscores</h1>
         <h1 id=timer>Timer</h1>
     </header>
     <main class=container>
