--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <header>
-        <h1 a href="assets/highscore.html">View Highscores</h1>
+        <h1>
+            <a href="highscore.html">View Highscores</a>
+        </h1>
         <h1 id=timer>Timer</h1>
     </header>
     <main class=container>
@@ -40,7 +42,7 @@
             <h2 id="form">
                 <form>
                     <input type="text" id="initials" placeholder="Initials">
-                    <input type="submit" value="Submit">              
+                    <input type="submit" value="Submit">
                 </form>
                 <p id="log"></p>
             </h2>
