--- a/highscore.html
+++ b/highscore.html
@@ -15,11 +15,12 @@
             <a href="index.html">Go Back</a>
         </h1>
     </header>
-    <main class=container>
-        <div>INITIALS</div>
-        <div>HIGH SCORE</div>
+    <main class=highScore>
+        <div>INITIALS =</div>
+        <div id=showInitials></div>
+        <div>HIGH SCORE =</div>
+        <div id=showHighScore></div>
     </main>
-
     <script src="assets/js/highScoreScript.js"></script>
 </body>
 
