--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <h1>Your score is:</h1>
             <h3 id=userScore></h3>
             <h1>Enter your intials:</h1>
-            <h2 id="form">
+            <h2 id=form>
                 <form>
                     <input type="text" id="initials" placeholder="Initials">
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" id="submit">
                 </form>
                 <p id="log"></p>
             </h2>
