--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>
-            <a href="highscore.html">View Highscores</a>
+            <a href="highscore.html">View Highscore</a>
         </h1>
         <h1 id=timer>Timer</h1>
     </header>
